src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Enterprise Solutions</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>A</fullName>
        </values>
        <values>
            <fullName>B</fullName>
        </values>
        <values>
            <fullName>C</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>D</fullName>
        </values>
        <values>
            <fullName>In Discussion</fullName>
        </values>
        <values>
            <fullName>Interested</fullName>
        </values>
        <values>
            <fullName>Internal Sign Off</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal Sent</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Event Space</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Event Booked</fullName>
        </values>
        <values>
            <fullName>Event Booked%2FDate Confirmed</fullName>
        </values>
        <values>
            <fullName>Event Brief Sent</fullName>
        </values>
        <values>
            <fullName>Event CC Auth Signed</fullName>
        </values>
        <values>
            <fullName>Event Closed Lost</fullName>
        </values>
        <values>
            <fullName>Event Completed</fullName>
        </values>
        <values>
            <fullName>Event Contract SIgned</fullName>
        </values>
        <values>
            <fullName>Event Contract Sent</fullName>
        </values>
        <values>
            <fullName>Event Contract%2FCC Auth Sent</fullName>
        </values>
        <values>
            <fullName>Event Deposit Paid</fullName>
        </values>
        <values>
            <fullName>Event Inquiry</fullName>
        </values>
        <values>
            <fullName>Event Paid in Full</fullName>
        </values>
        <values>
            <fullName>Event Set Up Detail Discussed</fullName>
        </values>
        <values>
            <fullName>Event Space Tour Complete</fullName>
        </values>
        <values>
            <fullName>Event Space Tour Scheduled</fullName>
        </values>
        <values>
            <fullName>Lounge Info Sent</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Journey</fullName>
        <description>New Sales process so our leads/prospects/customers have beautiful journey.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Sent</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Contract Voided</fullName>
        </values>
        <values>
            <fullName>Inquiry</fullName>
        </values>
        <values>
            <fullName>Journey Completed</fullName>
        </values>
        <values>
            <fullName>Tour Complete</fullName>
        </values>
        <values>
            <fullName>Tour Scheduled</fullName>
        </values>
        <values>
            <fullName>Wait List</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Office Space</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Sent</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Contract Voided</fullName>
        </values>
        <values>
            <fullName>Inquiry</fullName>
        </values>
        <values>
            <fullName>Office Hold</fullName>
        </values>
        <values>
            <fullName>Tour Complete</fullName>
        </values>
        <values>
            <fullName>Tour Scheduled</fullName>
        </values>
        <values>
            <fullName>Wait List</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Sent to Provider</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alcohol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alcohol?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attached_Proof_of_Pet_Vaccination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attached Proof of Pet Vaccination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_Address__c</fullName>
        <label>Authorize Signatory Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_City__c</fullName>
        <label>Authorize Signatory City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_State__c</fullName>
        <label>Authorize Signatory State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_Zip__c</fullName>
        <label>Authorize Signatory Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Network_Membership__c</fullName>
        <formula>IF( ISPICKVAL(Type__c ,&quot;Network Membership&quot;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basic Network Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_Address__c</fullName>
        <label>Billing Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_ACH__c</fullName>
        <label>Broker ACH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <label>Broker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broker_Phone__c</fullName>
        <label>Broker Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Brokerage_Company_Name__c</fullName>
        <label>Brokerage Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Address__c</fullName>
        <formula>Building__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_City_State_Zip__c</fullName>
        <formula>Building__r.City__c &amp;&quot;, &quot;&amp; Building__r.State__c &amp;&quot; &quot;&amp; Building__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building City, State Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Email1__c</fullName>
        <label>Building Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Building_Email__c</fullName>
        <formula>Building__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Interest__c</fullName>
        <label>Building Interest</label>
        <picklist>
            <picklistValues>
                <fullName>AMS-Metropool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS-Weteringschans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATX-Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATX-Interstate 35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKN-Dumbo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKN-Dumbo Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKN-Williamsburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS-Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS-Fort Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS-South Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI-Fulton Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI-Kinzie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI-River North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Chinatown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Crystal City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-DuPont Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Manhattan Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC-Wonder Bread</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISR-Tel Aviv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA-Fine Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA-Hollywood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA-Promenade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA-Santa Monica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON-Aldgate Tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON-Devonshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON-Moorgate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON-Soho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON-South Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON-Spitalfields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIA-Lincoln Road</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Legal_Name__c</fullName>
        <formula>Building__r.Legal_Licensor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CM_ID__c</fullName>
        <formula>Building__r.Responsible_CM__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM__c</fullName>
        <label>CM</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMs_Email__c</fullName>
        <formula>Building__r.Responsible_CM__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMs Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMs_Phone__c</fullName>
        <formula>Building__r.Responsible_CM__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMs Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COI__c</fullName>
        <label>COI</label>
        <picklist>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CVC__c</fullName>
        <label>CVC#</label>
        <length>5</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Canceled_Reason__c</fullName>
        <label>Canceled Reason</label>
        <picklist>
            <controllingField>Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>Changed Mind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_Expiration_Month__c</fullName>
        <label>Card Expiration Month</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Expiration_Year__c</fullName>
        <label>Card Expiration Year</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Cleaning__c</fullName>
        <label>Cleaning</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Manager_ID__c</fullName>
        <formula>Building__r.Responsible_CM__r.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Manager__c</fullName>
        <formula>Building__r.Responsible_CM__r.FirstName  &amp; &quot; &quot;&amp; Building__r.Responsible_CM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Responsible Community Manager of the Building.</inlineHelpText>
        <label>Community Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Solution__c</fullName>
        <label>Competitor Solution</label>
        <picklist>
            <controllingField>Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>Work at Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Another Coworking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Office Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conference_Rooms__c</fullName>
        <label>Conference Rooms</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Email__c</fullName>
        <label>Contract Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Link__c</fullName>
        <formula>IF ( 
  AND (
    ISPICKVAL(Type__c, &apos;Internal Transfer&apos;),
    $Profile.Name == &apos;WeWork Standard User&apos;
  ),
  &quot;Not available, this is an Internal Transfer&quot;,
  &quot;https://payments.wework.com/contract/&quot; +  Encoded_ID__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Recipient_Firstname__c</fullName>
        <formula>IF( ISBLANK(Account.Authorized_Signatory__c),
      Primary_Member_First_Name__c,
       Account.Authorized_Signatory__r.FirstName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Recipient Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_Date__c</fullName>
        <label>Contract Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>19</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_DoD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom DoD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom IT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Time_Needed__c</fullName>
        <label>Date/Time Needed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_Inquiry__c</fullName>
        <formula>TODAY() - Inquiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Inquiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docusign_ID__c</fullName>
        <formula>IF(ISBLANK( Account.Authorized_Signatory__c ),Account.Primary_Member__r.Id, Account.Authorized_Signatory__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Door_Locks__c</fullName>
        <label>Door Locks</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Encoded_ID__c</fullName>
        <label>Encoded ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Size__c</fullName>
        <label>Event Size</label>
        <picklist>
            <picklistValues>
                <fullName>25-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Space_Interest__c</fullName>
        <label>Event Space Interest</label>
        <picklist>
            <picklistValues>
                <fullName>NYC-Soho Lounge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-Soho West 8th Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-Bryant Park 3rd Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC-Fulton Center 19th Floor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meetup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hackathon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID_Hidden__c</fullName>
        <externalId>true</externalId>
        <label>External ID (Hidden)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Desks__c</fullName>
        <label>Gross Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCM_Deal_Type__c</fullName>
        <label>HCM Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us</label>
        <picklist>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeWork Member Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the news</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk listing site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign on the Building / Walk By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google AdWords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_long_you_plan_to_work_at_WeWork__c</fullName>
        <label>How long you plan to work at WeWork</label>
        <picklist>
            <picklistValues>
                <fullName>1-2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 6 months / forever!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Name_as_it_Appears_on_Card__c</fullName>
        <label>Individual Name as it Appears on Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Level_Tour_Outcome__c</fullName>
        <label>Interest Level/Tour Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Very Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Transfer_Encoded_ID__c</fullName>
        <label>Internal Transfer Encoded ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Transfer_Link__c</fullName>
        <formula>IF ( 
  AND (
    ISPICKVAL(Type__c, &apos;Internal Transfer&apos;)
  ),
  &quot;https://payments.wework.com/membership_changes/&quot; +  Internal_Transfer_Encoded_ID__c,
  &quot;Not available, this is not an Internal Transfer&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Transfer Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Calling__c</fullName>
        <label>International Calling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Followup_Date__c</fullName>
        <label>Last Followup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last__c</fullName>
        <formula>Primary_Member__r.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Primary Member Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Id_Text__c</fullName>
        <label>Lead Id (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <description>Id of the Lead from which this Opportunity was created.</description>
        <inlineHelpText>Id of the Lead from which this Opportunity was created.</inlineHelpText>
        <label>Lead Id</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>